content/markdown/docs/2.0.1/release-notes.md
<!--
Licensed to the Apache Software Foundation (ASF) under one
or more contributor license agreements.  See the NOTICE file
distributed with this work for additional information
regarding copyright ownership.  The ASF licenses this file
to you under the Apache License, Version 2.0 (the
"License"); you may not use this file except in compliance
with the License.  You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing,
software distributed under the License is distributed on an
"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
KIND, either express or implied.  See the License for the
specific language governing permissions and limitations
under the License.
-->

# Maven 2.0.1

## Issue Summary

[https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12316922&amp;version=12330148](https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12316922&version=12330148)

## Complete release notes

- See [complete release notes for all versions](../../docs/history.html)

