content/markdown/docs/3.0.4/release-notes.md
<!--
Licensed to the Apache Software Foundation (ASF) under one
or more contributor license agreements.  See the NOTICE file
distributed with this work for additional information
regarding copyright ownership.  The ASF licenses this file
to you under the Apache License, Version 2.0 (the
"License"); you may not use this file except in compliance
with the License.  You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing,
software distributed under the License is distributed on an
"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
KIND, either express or implied.  See the License for the
specific language governing permissions and limitations
under the License.
-->

# Maven 3.0.4

The Apache Maven team would like to announce the release of Maven 3.0.4.

Maven 3.0.4 is [available for download](../../download.html).

Maven is a software project management and comprehension tool. Based on the concept of a project object model (POM), Maven can manage a project's build, reporting and documentation from a central place.

Maven 3 aims to ensure backward compatibility with Maven 2, improve usability, increase performance, allow safe embedding, and pave the way to implement many highly demanded features.

**NOTE:** Maven 3.0.4 has a new default Http Wagon based on Apache HttpClient 4.1.2. You must read various available settings documented [here](/guides/mini/guide-http-settings.html).

Some enhancements are now included by default:

- http(s) connection pool.
- default preemptive authentication support.
- a default read timeout configured to 30 minutes.

The core release is independent of the plugins available. Further releases of plugins will be made separately. See the [Plugin List](../../plugins/index.html) for more information.

We hope you enjoy using Maven! If you have any questions, please consult:

- the website: [http://maven.apache.org/](http://maven.apache.org/)
- the maven-user mailing list: [http://maven.apache.org/mailing-lists.html](http://maven.apache.org/mailing-lists.html)

## Issue Summary

[https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12316922&amp;version=12330178](https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12316922&version=12330178)

## Complete Release Notes

- See [complete release notes for all versions](../../docs/history.html)

